Fixed login page

--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -18,8 +18,8 @@
 
           <!-- Login Form -->
           <form action="/login" method="post">
-            <input type="text" id="login" class="fadeIn second" name="email" placeholder="login">
-            <input type="text" id="password" class="fadeIn third" name="password" placeholder="password">
+            <input type="email" id="login" class="fadeIn second" name="email" placeholder="login">
+            <input type="password" id="password" class="fadeIn third" name="password" placeholder="password">
             <input type="submit" class="fadeIn fourth" value="login">
           </form>
 
