Added test data and removed progress bar

--- a/views/partials/index/TaskModal.ejs
+++ b/views/partials/index/TaskModal.ejs
@@ -4,10 +4,10 @@
     <div class="modal-content">
       <div class="modal-header">
         <h3 class="modal-title" id="<%=modal_name_task%>ModalLabel"><%=task.title%></h3>
-        <div class="task-progress">
+        <!-- <div class="task-progress">
           <label for="progress">Prog</label>
           <progress id="" value="50" max="100"> 32% </progress>
-        </div>
+        </div> -->
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
