--- a/views/partials/index/EditTaskModal.ejs
+++ b/views/partials/index/EditTaskModal.ejs
@@ -38,12 +38,8 @@
                 <br>
 
 
-                <label for="tag">Task Tags</label>
-                <select id="priority" name="tag" value="<%= task.tag%>">
-                  <option value="school">School</option>
-                  <option value="work">Work</option>
-                  <option value="personal">Personal</option>
-                </select>
+                <label for="tags">Task Tags</label>
+                <input type="text" class="form-control" name="tags" id="tags" value="">
               </div>
 
               <input class="btn btn-success my-2 my-sm-0" value="Submit" type="submit">
