--- a/views/partials/index/Sidebar.ejs
+++ b/views/partials/index/Sidebar.ejs
@@ -4,11 +4,11 @@
     <!-- Sidebar -->
     <nav id="sidebar">
         <div class="sidebar-header">
-            <h3>Taskist</h3>
+            <h3>Todo App</h3>
         </div>
 
         <ul class="list-unstyled components">
-            <p>CS_160 Task List</p>
+            <p>Project manager</p>
             <li class="active">
                 <a href="/tasks">Home</a>
             </li>
@@ -46,7 +46,7 @@
 
 
             <li class="active">
-                <a href="/logout">Logout</a>
+                <a href="/login">Logout</a>
             </li>
 
         </ul>
