--- a/public/css/login.css
+++ b/public/css/login.css
@@ -107,7 +107,7 @@ input[type=button]:active, input[type=submit]:active, input[type=reset]:active  
   transform: scale(0.95);
 }
 
-input[type=email], input[type=password] {
+input[type=text] {
   background-color: #f2f1ef;
   border: none;
   color: #0d0d0d;
@@ -128,12 +128,12 @@ input[type=email], input[type=password] {
   border-radius: 5px 5px 5px 5px;
 }
 
-input[type=email]:focus, input[type=password]:focus  {
+input[type=text]:focus {
   background-color: #fff;
   border-bottom: 2px solid #5fbae9;
 }
 
-input[type=email]:placeholder input[type=password]:placeholder {
+input[type=text]:placeholder {
   color: #cccccc;
 }
 
