--- a/views/pages/login.ejs
+++ b/views/pages/login.ejs
@@ -18,16 +18,16 @@
 
           <!-- Login Form -->
           <form action="/login" method="post">
-            <input type="email" id="login" class="fadeIn second" name="email" placeholder="login">
-            <input type="password" id="password" class="fadeIn third" name="password" placeholder="password">
+            <input type="text" id="login" class="fadeIn second" name="login" placeholder="login">
+            <input type="text" id="password" class="fadeIn third" name="login" placeholder="password">
             <input type="submit" class="fadeIn fourth" value="login">
           </form>
 
           <!-- Remind Passowrd -->
           <div id="formFooter">
-            <a class="underlineHover" href="/login/register">Create an Account</a>
+            <a class="underlineHover" href="#">Create an Account</a>
             <br>
-         
+            <a class="underlineHover" href="#">Forgot Password?</a>
           </div>
 
         </div>
