--- a/views/partials/index/TaskMenu.ejs
+++ b/views/partials/index/TaskMenu.ejs
@@ -1,10 +1,9 @@
 <div id="task-menu">
-  <nav id="task-nav"   class="navbar navbar-expand-lg ">
+  <nav id="task-nav"   class="navbar navbar-expand-lg navbar-light bg-dark pull-right">
       <form action="/tasks/search"  method="GET" id="task-form-nav"class="form-inline ">
-        <button type="button" id="add-task" class="btn btn-primary " data-toggle="modal" data-target="#addTaskModal">Add Task</button>
-        <input class="form-control mr-sm-2" id="task-search" name ="search" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-success my-2 my-sm-0" type="submit">Search</button>
-       
+        <input class="form-control mr-sm-2" name ="search" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        <button type="button" class="btn btn-primary " data-toggle="modal" data-target="#addTaskModal">Add Task</button>
         <a href="#">
           <span class="glyphicon glyphicon-triangle-bottom"></span>
         </a>
